# stm32u5-smartwatch

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  STM32U5_LVGL_Inteligentlight.ioc
Core/Inc/: app_freertos.h  (+12 more)
LVGL/: lv_conf.h  lvgl.h
LVGL/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
LVGL/UI/fonts/: ui_font_Font1.c  ui_font_Smil16.c  ui_font_SmileySans26.c  ui_font_ali1.c  ui_font_ali2.c  ui_font_q1.c
LVGL/UI/images/: ui_img_1154559383.c  ui_img_1197078990.c  ui_img_1225357782.c  ui_img_1349814123.c  ui_img_1369692798.c  ui_img_1389843189.c  ui_img_1607374796.c  ui_img_1611373906.c  ui_img_1657355558.c  ui_img_1684792934.c  ui_img_1772208564.c  ui_img_1814031685.c  ui_img_1840017345.c  ui_img_2087202441.c  ui_img_375917039.c  ui_img_482543466.c  ui_img_545021016.c  ui_img_616669363.c  ui_img_623432142.c  ui_img_843332074.c  ui_img_942679780.c  ui_img_bg4_png.c  ui_img_call_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_min_png.c  ui_img_clockwise_sec_png.c  ui_img_flash_png.c  ui_img_heart_png.c  ui_img_screen_background_320x240_png.c  ui_img_step_png.c  ui_img_wave1_png.c  ui_img_wave2_png.c  ui_img_weather_sun_png.c
LVGL/UI/screens/: ui_ScreenCall.c  ui_ScreenCall.h  ui_ScreenHealth.c  ui_ScreenHealth.h  ui_ScreenHome.c  ui_ScreenHome.h  ui_ScreenSport.c  ui_ScreenSport.h  ui_ScreenWeather.c  ui_ScreenWeather.h
MDK-ARM/: STM32U5_LVGL_Inteligentlight.uvoptx  STM32U5_LVGL_Inteligentlight.uvprojx  startup_stm32u575xx.s
docs/: ARCHITECTURE.md  BUILD.md  BUILD_AND_FLASH.md  FEATURES.md  FEATURE_STATUS.md  GITHUB_UPLOAD.md  PROJECT_AUDIT_V3.md  PROJECT_OVERVIEW.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SOURCE_MANIFEST.txt  TECHNICAL_ROUTE.md  VALIDATION_GIT_READY.txt  VALIDATION_V3.txt
scripts/: push_to_github.ps1  verify_repo.py
(+32 files in other folders)
