SET(SOURCES screens/ui_ScreenHome.c
    screens/ui_ScreenHealth.c
    screens/ui_ScreenSport.c
    screens/ui_ScreenWeather.c
    screens/ui_ScreenCall.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_bg4_png.c
    images/ui_img_weather_sun_png.c
    images/ui_img_flash_png.c
    images/ui_img_clockwise_sec_png.c
    images/ui_img_clockwise_min_png.c
    images/ui_img_clockwise_hour_png.c
    images/ui_img_843332074.c
    images/ui_img_545021016.c
    images/ui_img_step_png.c
    images/ui_img_1154559383.c
    images/ui_img_623432142.c
    images/ui_img_heart_png.c
    images/ui_img_1684792934.c
    images/ui_img_screen_background_320x240_png.c
    images/ui_img_wave2_png.c
    images/ui_img_wave1_png.c
    images/ui_img_1349814123.c
    images/ui_img_1197078990.c
    images/ui_img_616669363.c
    images/ui_img_1657355558.c
    images/ui_img_375917039.c
    images/ui_img_1389843189.c
    images/ui_img_1814031685.c
    images/ui_img_1611373906.c
    images/ui_img_482543466.c
    images/ui_img_1772208564.c
    images/ui_img_942679780.c
    images/ui_img_2087202441.c
    images/ui_img_1607374796.c
    images/ui_img_1369692798.c
    images/ui_img_1225357782.c
    images/ui_img_1840017345.c
    images/ui_img_call_png.c
    fonts/ui_font_H1.c
    fonts/ui_font_SmileySans26.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_Smil16.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c
    fonts/ui_font_Smil16.c
    fonts/ui_font_H1.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_SmileySans26.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c)

add_library(ui ${SOURCES})
